<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile"
            android:icon="@drawable/baseline_perm_identity_black_18dp"
            />
        <item
            android:id="@+id/nav_list"
            android:title="@string/menu_list"
            android:icon="@drawable/baseline_featured_play_list_black_18dp"
            />
        <item
            android:id="@+id/nav_theme"
            android:title="@string/menu_theme"
            android:icon="@drawable/theme"
            />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_black_18dp"
            android:title="@string/menu_setting" />

    </group>
</menu>