<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/nav_header_bg"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:id="@+id/nav_header_profile_cover"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/sign"
        android:id="@+id/imageView"
        android:contentDescription="@string/nav_header_desc"
        >
    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/nav_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txt_header_screen_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:id="@+id/txt_menu_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_text_following"
            android:layout_marginEnd="20dp"
            />

        <TextView
            android:id="@+id/txt_menu_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_text_follower"
            />

    </LinearLayout>
</LinearLayout>