<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar_register"
        layout="@layout/toolbar_register"
        />

    <TextView
        android:id="@+id/txt_create_your_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/ed_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_create_your_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/register_name_vi"
        android:textSize="18sp"
        android:fontFamily="arial"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:id="@+id/txt_count_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="20"
        app:layout_constraintTop_toBottomOf="@id/ed_register_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        />

    <EditText
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_enter_email"
        app:layout_constraintTop_toBottomOf="@id/txt_count_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="arial"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:id="@+id/txt_email_register_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/red_error"
        android:visibility="invisible"
        />

    <EditText
        android:id="@+id/ed_register_screen_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ed_screen_name"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="arial"
        />

    <EditText
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_enter_password"
        app:layout_constraintTop_toBottomOf="@id/ed_register_screen_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="arial"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/txt_password_register_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_register_password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/red_error"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_vi"
        app:layout_constraintTop_toBottomOf="@id/txt_password_register_error"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_btn_create_account"
        android:textColor="#FFF"
        android:textAllCaps="false"
        />
</androidx.constraintlayout.widget.ConstraintLayout>