<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/toolbar_register"
        />
    <TextView
        android:id="@+id/txt_login_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_lost_bird"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_register"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="arial"
        android:textColor="#000"
        />

    <TextView
        android:id="@+id/txt_enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_enter_email"
        app:layout_constraintTop_toBottomOf="@id/txt_login_lb"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        />


    <EditText
        android:id="@+id/ed_enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_enter_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:id="@+id/txt_enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_enter_password"
        app:layout_constraintTop_toBottomOf="@id/ed_enter_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/ed_enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_enter_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#FFF"
        android:background="@drawable/custom_btn_create_account"
        />
</androidx.constraintlayout.widget.ConstraintLayout>