<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_setting_user"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_profile"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            />
    </androidx.appcompat.widget.Toolbar>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_setting_user"
        android:id="@+id/coor_profile"
        >
        <ImageView
            android:id="@+id/profile_edit_cover"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/banner"
            android:scaleType="centerCrop"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_edit_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sign"
            app:layout_anchor="@id/profile_edit_cover"
            app:layout_anchorGravity="bottom|left"
            android:layout_marginStart="10dp"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/txt_setting_profile_screenname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/coor_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/ed_screen_name"
        />
    <EditText
        android:id="@+id/ed_setting_profile_screenname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_setting_profile_screenname"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/txt_setting_profile_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ed_setting_profile_screenname"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/bio"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

    <EditText
        android:id="@+id/ed_setting_profile_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_setting_profile_bio"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <TextView
        android:id="@+id/txt_setting_profile_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ed_setting_profile_bio"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/country"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        />

    <EditText
        android:id="@+id/ed_setting_profile_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_setting_profile_country"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>